kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: jkpg-city-ingress
    namespace: jkpg-city
    annotations:
        nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
    rules:
        - host: localhost
          http:
              paths:
                  - pathType: ImplementationSpecific
                    backend:
                        service:
                            name: jkpg-city-service
                            port:
                                number: 3000
